--- a/test.html
+++ b/test.html
@@ -2,9 +2,20 @@
 <head>
   <meta charset='utf-8'>
   <title>G</title>
-  <script id="vshader" src="./vertex.js" type="x-shader/x-vertex"></script>
-  <script id="fshader" src="./fragment.js" type="x-shader/x-fragment"></script>
-  <script src="./gl-matrix.js"></script>
+  <script id="vshader" type="x-shader/x-vertex">
+    attribute vec3 position;
+    uniform   mat4 mvpMatrix;
+
+    void main(void) {
+        gl_Position = mvpMatrix * vec4(position, 1.0);
+    }
+  </script>
+  <script id="fshader" type="x-shader/x-fragment">
+    void main(void) {
+      gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
+    }
+  </script>
+  <script src="./minMatrix.js"></script>
   <script src="./test.js"></script>
 </head>
 <body>
