--- a/src/test.html
+++ b/src/test.html
@@ -4,15 +4,20 @@
   <title>G</title>
   <script id="vshader" type="x-shader/x-vertex">
     attribute vec3 position;
+    attribute vec4 color;
     uniform   mat4 mvpMatrix;
+    varying   vec4 vColor;
 
     void main(void) {
+        vColor = color;
         gl_Position = mvpMatrix * vec4(position, 1.0);
     }
   </script>
   <script id="fshader" type="x-shader/x-fragment">
+    precision mediump float;
+    varing vec4 vColor;
     void main(void) {
-      gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
+      gl_FragColor = vColor;
     }
   </script>
   <script src="./minMatrix.js"></script>
