スペルミス修正

--- a/src/test.html
+++ b/src/test.html
@@ -15,7 +15,8 @@
   </script>
   <script id="fshader" type="x-shader/x-fragment">
     precision mediump float;
-    varing vec4 vColor;
+    varying vec4 vColor;
+
     void main(void) {
       gl_FragColor = vColor;
     }
